# Apartment_Booking_System

./: example.py  hash.py  main.py  pyproject.toml  schema.py
Middleware/: JWTManager.py
client/: package.json
client/public/: index.html
client/src/: App.css  App.js  index.js  routes.js
client/src/Components/: AddApartment.js  AddBooking.js  AddBuilding.js  ApartmentDetails.js  Home.js  ListedApartment.js  Login.js  NavBar.js  Profilepage.js  Signup.js  Signup_second.css  Signup_second.js
client/src/Graphql/: Mutations.js  Queries.js
db/: __init__.py
models/: Apartment_model.py  Booking_model.py  Building_model.py  User_model.py
